# DB_lab_25spring

./: Cargo.toml  README.md  db.sql
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  AppLayout.vue  style.css
frontend/src/components/: CourseDelete.vue  CourseInsert.vue  CourseQuery.vue  CourseSection.vue  CourseUpdate.vue  InsertPanel.vue  LinkForm.vue  LinkSection.vue  PaperDelete.vue  PaperInsert.vue  PaperQuery.vue  PaperSection.vue  PaperUpdate.vue  ProjectDelete.vue  ProjectInsert.vue  ProjectQuery.vue  ProjectSection.vue  ProjectUpdate.vue  QueryPanel.vue  RangePanel.vue  RangeQuerySection.vue  TeacherForm.vue  TeacherSection.vue  UpdatePanel.vue
frontend/src/router/: index.js
frontend/src/views/: AdminPage.vue  LoginPage.vue  MainPage.vue  ProfilePage.vue
pdf/: lib.typ  main.typ  test.typ
src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs  utils.rs
