[package]
name = "db_lab"
version = "0.1.0"
edition = "2024"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "mysql", "chrono" ] }
chrono = "0.4"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
bcrypt = "0.17"